--- a/index.html
+++ b/index.html
@@ -174,6 +174,33 @@
       </div>
     </section>
 
+    <section class="game">
+      <div class="container">
+        <h2 class="section-title">GAMES</h2>
+        <div class="game__inner">
+          <div class="game__descr">
+            <P class="game__descr-title">
+              It’s all fun and games
+            </P>
+            <p class="game__descr-text">
+              Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences
+            </p>
+            <a href="#" class="game__link">SEE ALL GAMES</a>
+          </div>
+
+          <div class="game__item">
+            <img class="game__item-img"  src="images/game-1.jpg" alt="">
+            <h3 class="game__item-title">Blade & Sorcery: Nomad</h3>
+            <p class="game__item-text">Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences</p>
+            <a href="#" class="game__item-link">see more</a>
+          </div>
+
+          .game__item*3>img[src=images/game-$.jpg]
+
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <script src="js/main.js"></script>
