--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <section class="game">
       <div class="container">
-        <h2 class="section-title">GAMES</h2>
+        <h2 class="section-title" game__title>GAMES</h2>
         <div class="game__inner">
           <div class="game__descr">
             <P class="game__descr-title">
@@ -188,14 +188,28 @@
             <a href="#" class="game__link">SEE ALL GAMES</a>
           </div>
 
+          
+
           <div class="game__item">
-            <img class="game__item-img"  src="images/game-1.jpg" alt="">
-            <h3 class="game__item-title">Blade & Sorcery: Nomad</h3>
-            <p class="game__item-text">Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences</p>
+            <img src="images/game-1.jpg" alt="" class="game__item-img">
+            <div class="game__item-title">Blade & Sorcery: Nomad</div>
+            <div class="game__item-text">Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences</div>
             <a href="#" class="game__item-link">see more</a>
           </div>
 
-          .game__item*3>img[src=images/game-$.jpg]
+          <div class="game__item">
+            <img src="images/game-2.jpg" alt="" class="game__item-img">
+            <div class="game__item-title">Population: One</div>
+            <div class="game__item-text">Climb anything. Fight everywhere. Experience battle royale only possible in VR</div>
+            <a href="#" class="game__item-link">see more</a>
+          </div>
+
+          <div class="game__item">
+            <img src="images/game-3.jpg" alt="" class="game__item-img">
+            <div class="game__item-title">Supernatural</div>
+            <div class="game__item-text">Box, Flow, Meditate and Stretch with real coaches in stunning destinations from around the world. Enjoy new workouts every day.</div>
+            <a href="#" class="game__item-link">see more</a>
+          </div>
 
         </div>
       </div>
