--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <section class="game">
       <div class="container">
-        <h2 class="section-title" game__title>GAMES</h2>
+        <h2 class="section-title game__title">GAMES</h2>
         <div class="game__inner">
           <div class="game__descr">
             <P class="game__descr-title">
