--- a/index.html
+++ b/index.html
@@ -183,34 +183,155 @@
               It’s all fun and games
             </P>
             <p class="game__descr-text">
-              Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences
+              Discover new adventures, master epic challenges or revisit classic moments in your favourite games and
+              experiences
             </p>
             <a href="#" class="game__link">SEE ALL GAMES</a>
           </div>
 
-          
+
 
           <div class="game__item">
             <img src="images/game-1.jpg" alt="" class="game__item-img">
             <div class="game__item-title">Blade & Sorcery: Nomad</div>
-            <div class="game__item-text">Discover new adventures, master epic challenges or revisit classic moments in your favourite games and experiences</div>
+            <div class="game__item-text">Discover new adventures, master epic challenges or revisit classic moments in
+              your favourite games and experiences</div>
             <a href="#" class="game__item-link">see more</a>
           </div>
 
           <div class="game__item">
             <img src="images/game-2.jpg" alt="" class="game__item-img">
             <div class="game__item-title">Population: One</div>
-            <div class="game__item-text">Climb anything. Fight everywhere. Experience battle royale only possible in VR</div>
+            <div class="game__item-text">Climb anything. Fight everywhere. Experience battle royale only possible in VR
+            </div>
             <a href="#" class="game__item-link">see more</a>
           </div>
 
           <div class="game__item">
             <img src="images/game-3.jpg" alt="" class="game__item-img">
             <div class="game__item-title">Supernatural</div>
-            <div class="game__item-text">Box, Flow, Meditate and Stretch with real coaches in stunning destinations from around the world. Enjoy new workouts every day.</div>
+            <div class="game__item-text">Box, Flow, Meditate and Stretch with real coaches in stunning destinations from
+              around the world. Enjoy new workouts every day.</div>
             <a href="#" class="game__item-link">see more</a>
           </div>
 
+        </div>
+      </div>
+    </section>
+
+    <div class="buy">
+
+      <p class="buy__bg">OCULUS</p>
+      <img src="images/oculus.png" alt="" class="buy__img">
+      <button class="buy-btn">
+        <span class="buy-btn__text">BUY NOW</span>
+        <span class="buy-btn__price">399,99 USD</span>
+      </button>
+
+      <p class="buy__text">For a limited time only, save $59.99 USD. Offer ends 1/19/23</p>
+
+    </div>
+
+    <section class="equipment">
+      <div class="container">
+        <h2 class="equipment__title section-title">IN THE BOX</h2>
+        <div class="equipment__box">
+
+          <div class="equipment__box-item equipment__box-item-big">
+            <img src="images/eq1.jpg" alt="" class="equipment__box-img">
+            <p class="equipment__box-text">
+              VR Headset
+            </p>
+          </div>
+
+          <div class="equipment__box-item equipment__box-item-mini">
+            <img src="images/eq2.jpg" alt="" class="equipment__box-img">
+            <p class="equipment__box-text">
+              Two Touch Controllers & AA Batteries
+            </p>
+          </div>
+
+          <div class="equipment__box-item equipment__box-item--one equipment__box-item-title">
+            <p class="equipment__box-title">
+              What's <br> included
+            </p>
+          </div>
+
+          <div class="equipment__box-item equipment__box-item-power">
+            <img src="images/eq3.jpg" alt="" class="equipment__box-img">
+            <p class="equipment__box-text">
+              Charging Cable & Power Adapter
+            </p>
+          </div>
+
+          <div class="equipment__box-item equipment__box-item-test">
+            <img src="images/eq4.jpg" alt="" class="equipment__box-img">
+            <p class="equipment__box-text">
+              Glasses Spacer
+            </p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <div class="promo">
+      <div class="container">
+        <div class="promo__inner">
+          <button class="promo__btn">GO</button>
+        </div>
+      </div>
+    </div>
+
+    <section class="accessories">
+      <div class="container">
+        <h2 class="accessories__title section-title">IN THE BOX</h2>
+        <p class="accessories__text">
+          Personalize every experience
+        </p>
+        <div class="accessories__items">
+          <div class="accessories__item">
+            <img class="accessories__item-img" src="images/acc1.jpg" alt="">
+            <h3 class="accessories__item-title">Meta Quest 2 Carrying Case</h3>
+            <p class="accessories__item-text">Protect your system–at home or away.</p>
+            <p class="accessories__item-prise">$59.99 USD</p>
+            <button class="accessories__item-btn">
+              BUY NOW
+            </button>
+          </div>
+        </div>
+        <div class="accessories__items">
+          <div class="accessories__item">
+            <img class="accessories__item-img" src="images/acc2.jpg" alt="">
+            <h3 class="accessories__item-title">Link Cable</h3>
+            <p class="accessories__item-text">Harness the power of your PC with this premium fiber-optic cable.</p>
+            <p class="accessories__item-prise">$79.99 USD</p>
+            <button class="accessories__item-btn">
+              BUY NOW
+            </button>
+          </div>
+        </div>
+        <div class="accessories__items">
+          <div class="accessories__item">
+            <img class="accessories__item-img" src="images/acc3.jpg" alt="">
+            <h3 class="accessories__item-title">Meta Quest 2 Active Pack</h3>
+            <p class="accessories__item-text">A wipeable facial interface, wrist straps, and knuckle straps.</p>
+            <p class="accessories__item-prise">$69.99 USD</p>
+            <button class="accessories__item-btn">
+              BUY NOW
+            </button>
+          </div>
+        </div>
+        <div class="accessories__items">
+          <div class="accessories__item">
+            <img class="accessories__item-img" src="images/acc4.jpg" alt="">
+            <h3 class="accessories__item-title">Meta Quest Gift Cards</h3>
+            <p class="accessories__item-text">Redeemable on 350+ games and apps.</p>
+            <p class="accessories__item-prise">$15-50 USD</p>
+            <button class="accessories__item-btn">
+              BUY NOW
+            </button>
+          </div>
         </div>
       </div>
     </section>
